# wallpaper-manager

./: .gitignore  CHANGELOG.md  README.md  app.py  build.bat  build.spec  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: db.py  export_worker.py  models.py  rotation_worker.py  scanner.py  tag_manager.py  thumbnail_worker.py  version_check.py  wallpaper_setter.py
deprecated/: __init__.py  test_we_controller.py  we_controller.py
docs/: DEV.md  PRD.md
scripts/: build.py
tests/: conftest.py  test_advanced_search.py  test_db.py  test_models.py  test_rotation_worker.py  test_scanner.py  test_tag_manager.py  test_theme.py  test_wallpaper_setter.py  test_we_controller.py
ui/: context_menu.py  dir_manager_dialog.py  filter_bar.py  main_window.py  preview_dialog.py  tag_manager_dialog.py  theme.py  wallpaper_card.py
